refactor: 优化配置